[project]
name = "ppo-rnd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ale-py>=0.8.1",
    "autorom[accept-rom-license]>=0.4.2",
    "gymnasium[atari]>=0.29.0",
    "imageio>=2.37.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "opencv-contrib-python>=4.8.0",
    "opencv-python>=4.8.0",
    "pillow>=11.2.1",
    "tensorboard>=2.13.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
]
